--- a/resources/scss/styles.scss
+++ b/resources/scss/styles.scss
@@ -20,13 +20,17 @@ body {
     box-sizing: border-box;
 }
 
-.text-light-gray{
+/* text color */
+
+.text-light-gray {
     color: var(--light-gray) !important;
 }
 
-.text-theme{
+.text-theme {
     color: var(--thene) !important;
 }
+
+/* button */
 
 .btn-icon {
     background-color: transparent;
@@ -40,16 +44,225 @@ body {
 
 }
 
+/* dropdown */
+
 .dropdown {
     .dropdown-menu {
         .dropdown-item {
             font-size: 14px !important;
             color: var(--light-gray) !important;
+
             &:hover {
                 background-color: var(--light-theme) !important;
             }
         }
     }
+}
+
+/* table */
+
+.table {
+    width: 100%;
+    border-spacing: 0;
+
+    thead {
+        tr {
+            th {
+                padding: 18px 0;
+                text-align: start;
+                border: none;
+                outline: none;
+
+                &.checkbox {
+                    width: 60px;
+                    min-width: 60px;
+                }
+
+                &.button {
+                    width: 200px;
+                    min-width: 200px;
+                }
+
+                &.id {
+                    width: 90px;
+                    min-width: 90px;
+                }
+
+                &.name {
+                    width: 250px;
+                    min-width: 250px;
+                }
+
+                &.date, &.role, &.category {
+                    width: 170px;
+                    min-width: 170px
+                }
+
+                &.payment {
+                    width: 90px;
+                    min-width: 90px;
+                }
+
+                &.status {
+                    width: 90px;
+                    min-width: 90px;
+                }
+
+                &.default-width {
+                    width: 220px;
+                    min-width: 220px;
+                }
+
+                &.action {
+                    width: 120px;
+                    min-width: 120px
+                }
+
+                &:first-child {
+                    padding-left: 18px;
+                }
+
+                &:last-child {
+                    padding-right: 18px;
+                }
+
+            }
+        }
+    }
+
+    tbody {
+        tr {
+            &:hover {
+                transition: 0.3s all ease-in-out;
+
+                td {
+                    background-color: var(--bs-light);
+                    transition: 0.3s all ease-in-out;
+
+                    &:first-child {
+                        border-top-left-radius: 5px;
+                        border-bottom-left-radius: 5px;
+                    }
+
+                    &:last-child {
+                        border-top-right-radius: 5px;
+                        border-bottom-right-radius: 5px;
+                    }
+                }
+            }
+
+            td {
+                padding: 15px 0;
+                vertical-align: middle;
+                outline: none;
+                border-bottom: none;
+                transition: 0.3s all ease-in-out;
+                color: var(--bs-secondary);
+
+                .face, .item {
+                    width: 45px;
+                    height: 45px;
+                    border-radius: 50%;
+                }
+
+                &.checkbox {
+                    width: 60px;
+                    min-width: 60px;
+                }
+
+                &.id {
+                    width: 90px;
+                    min-width: 90px;
+                }
+
+                &.name {
+                    width: 270px;
+                    min-width: 300px;
+                }
+
+                &.payment, &.price, &.quantity {
+                    width: 90px;
+                    min-width: 90px;
+                }
+
+                &.date, &.role {
+                    width: 170px;
+                    min-width: 170px
+                }
+
+                &.status {
+                    width: 90px;
+                    min-width: 90px;
+                }
+
+                &.default-width {
+                    width: 220px;
+                    min-width: 220px;
+                }
+
+                &.action {
+                    width: 120px;
+                    min-width: 120px;
+
+                    .btn-icon {
+                        background-color: transparent;
+                        width: 45px;
+                        height: 45px;
+                        border-radius: 50%;
+                        display: flex;
+                        justify-content: center;
+                        align-items: center;
+                        border: none;
+                        outline: none;
+
+                        &:hover {
+                            background-color: var(--bs-border-color);
+                            box-shadow: 0 0 4px 0 var(--bs-border-color);
+                        }
+
+                    }
+
+                }
+
+                &.face {
+                    width: 45px;
+                    height: 45px;
+                    border-radius: 50%;
+                    overflow: hidden;
+                }
+
+                &:first-child {
+                    padding-left: 20px;
+                }
+
+                &:last-child {
+                    padding-right: 20px;
+                }
+
+            }
+        }
+    }
+
+    tfoot {
+        th {
+            padding: 15px 0;
+            vertical-align: middle;
+            outline: none;
+            border-bottom: none;
+            transition: 0.3s all ease-in-out;
+            color: var(--bs-secondary);
+
+            &:first-child {
+                padding-left: 20px;
+            }
+
+            &:last-child {
+                padding-right: 20px;
+            }
+
+        }
+    }
+
 }
 
 .panel {
@@ -75,7 +288,7 @@ body {
             transition: 0.3s all ease-in-out;
             box-shadow: 0 0 4px 0 var(--border-color);
 
-            &.active{
+            &.active {
                 transition: 0.3s all ease-in-out;
                 left: 0;
             }
@@ -258,25 +471,43 @@ body {
             }
 
             .breadcrumb-title {
-                font-size: 18px !important;
+                font-size: 16px !important;
             }
 
             .breadcrumb-text {
-                font-size: 14px;
+                font-size: 14px !important;
             }
 
-            .card-hover{
+            .card-hover {
                 color: var(--light-gray);
                 transition: 0.3s all ease-in-out;
 
-                &:hover{
+                &:hover {
                     transition: 0.3s all ease-in-out;
                     box-shadow: 0 0 8px 0 var(--theme) inset;
 
-                    .effect{
+                    .effect {
                         color: var(--theme);
                     }
 
+                }
+
+            }
+
+            .card-list {
+                height: calc(100vh - 300px);
+                overflow-y: scroll;
+                overflow-x: hidden;
+
+                &::-webkit-scrollbar {
+                    background-color: transparent;
+                    width: 10px;
+                }
+
+                &::-webkit-scrollbar-thumb {
+                    background: var(--light-theme);
+                    border-radius: 0;
+                    height: 0 !important;
                 }
 
             }
