--- a/resources/scss/styles.scss
+++ b/resources/scss/styles.scss
@@ -20,500 +20,20 @@ body {
     box-sizing: border-box;
 }
 
-/* text color */
+/* --- --- --- --- 01 - typography --- --- --- --- */
+@import "components/01_typography";
 
-.text-light-gray {
-    color: var(--light-gray) !important;
-}
+/* --- --- --- --- 02 - button --- --- --- --- */
+@import "components/02_button";
 
-.text-theme {
-    color: var(--thene) !important;
-}
+/* --- --- --- --- 03 - dropdown --- --- --- --- */
+@import "components/03_dropdown";
 
-/* button */
+/* --- --- --- --- 04 - table --- --- --- --- */
+@import "components/04_table";
 
-.btn-icon {
-    background-color: transparent;
-    transition: 0.3s all ease-in-out;
-    color: var(--light-gray) !important;
+/* --- --- --- --- 05 - admin panel --- --- --- --- */
+@import "weight/admin-panel/admin-panel";
 
-    &:hover {
-        transition: 0.3s all ease-in-out;
-        background-color: var(--light-theme) !important;
-    }
-
-}
-
-/* dropdown */
-
-.dropdown {
-    .dropdown-menu {
-        .dropdown-item {
-            font-size: 14px !important;
-            color: var(--light-gray) !important;
-
-            &:hover {
-                background-color: var(--light-theme) !important;
-            }
-        }
-    }
-}
-
-/* table */
-
-.table {
-    width: 100%;
-    border-spacing: 0;
-
-    thead {
-        tr {
-            th {
-                padding: 18px 0;
-                text-align: start;
-                border: none;
-                outline: none;
-
-                &.checkbox {
-                    width: 60px;
-                    min-width: 60px;
-                }
-
-                &.button {
-                    width: 200px;
-                    min-width: 200px;
-                }
-
-                &.id {
-                    width: 90px;
-                    min-width: 90px;
-                }
-
-                &.name {
-                    width: 250px;
-                    min-width: 250px;
-                }
-
-                &.date, &.role, &.category {
-                    width: 170px;
-                    min-width: 170px
-                }
-
-                &.payment {
-                    width: 90px;
-                    min-width: 90px;
-                }
-
-                &.status {
-                    width: 90px;
-                    min-width: 90px;
-                }
-
-                &.default-width {
-                    width: 220px;
-                    min-width: 220px;
-                }
-
-                &.action {
-                    width: 120px;
-                    min-width: 120px
-                }
-
-                &:first-child {
-                    padding-left: 18px;
-                }
-
-                &:last-child {
-                    padding-right: 18px;
-                }
-
-            }
-        }
-    }
-
-    tbody {
-        tr {
-            &:hover {
-                transition: 0.3s all ease-in-out;
-
-                td {
-                    background-color: var(--bs-light);
-                    transition: 0.3s all ease-in-out;
-
-                    &:first-child {
-                        border-top-left-radius: 5px;
-                        border-bottom-left-radius: 5px;
-                    }
-
-                    &:last-child {
-                        border-top-right-radius: 5px;
-                        border-bottom-right-radius: 5px;
-                    }
-                }
-            }
-
-            td {
-                padding: 15px 0;
-                vertical-align: middle;
-                outline: none;
-                border-bottom: none;
-                transition: 0.3s all ease-in-out;
-                color: var(--bs-secondary);
-
-                .face, .item {
-                    width: 45px;
-                    height: 45px;
-                    border-radius: 50%;
-                }
-
-                &.checkbox {
-                    width: 60px;
-                    min-width: 60px;
-                }
-
-                &.id {
-                    width: 90px;
-                    min-width: 90px;
-                }
-
-                &.name {
-                    width: 270px;
-                    min-width: 300px;
-                }
-
-                &.payment, &.price, &.quantity {
-                    width: 90px;
-                    min-width: 90px;
-                }
-
-                &.date, &.role {
-                    width: 170px;
-                    min-width: 170px
-                }
-
-                &.status {
-                    width: 90px;
-                    min-width: 90px;
-                }
-
-                &.default-width {
-                    width: 220px;
-                    min-width: 220px;
-                }
-
-                &.action {
-                    width: 120px;
-                    min-width: 120px;
-
-                    .btn-icon {
-                        background-color: transparent;
-                        width: 45px;
-                        height: 45px;
-                        border-radius: 50%;
-                        display: flex;
-                        justify-content: center;
-                        align-items: center;
-                        border: none;
-                        outline: none;
-
-                        &:hover {
-                            background-color: var(--bs-border-color);
-                            box-shadow: 0 0 4px 0 var(--bs-border-color);
-                        }
-
-                    }
-
-                }
-
-                &.face {
-                    width: 45px;
-                    height: 45px;
-                    border-radius: 50%;
-                    overflow: hidden;
-                }
-
-                &:first-child {
-                    padding-left: 20px;
-                }
-
-                &:last-child {
-                    padding-right: 20px;
-                }
-
-            }
-        }
-    }
-
-    tfoot {
-        th {
-            padding: 15px 0;
-            vertical-align: middle;
-            outline: none;
-            border-bottom: none;
-            transition: 0.3s all ease-in-out;
-            color: var(--bs-secondary);
-
-            &:first-child {
-                padding-left: 20px;
-            }
-
-            &:last-child {
-                padding-right: 20px;
-            }
-
-        }
-    }
-
-}
-
-.panel {
-    display: flex;
-
-    .sidebar {
-        width: 250px;
-        height: 100vh;
-
-        @media screen and (max-width: 991px) {
-            width: 60px;
-        }
-
-        @media screen and (max-width: 576px) {
-            position: fixed;
-            left: -250px;
-            top: 0;
-            bottom: 0;
-            width: 250px;
-            height: 100%;
-            background-color: var(--white);
-            z-index: 10;
-            transition: 0.3s all ease-in-out;
-            box-shadow: 0 0 4px 0 var(--border-color);
-
-            &.active {
-                transition: 0.3s all ease-in-out;
-                left: 0;
-            }
-
-        }
-
-        .sidebar-header {
-            height: 70px;
-            display: flex;
-            justify-content: start;
-            align-items: center;
-            padding: 0 20px;
-
-            @media screen and (max-width: 991px) {
-                padding: 0;
-                text-align: center;
-            }
-
-            @media screen and (max-width: 576px) {
-                padding: 0 20px;
-                text-align: start;
-            }
-
-            .sidebar-header-link {
-                font-size: 18px;
-                text-decoration: none;
-                color: var(--light-gray);
-                display: block;
-                padding: 10px 20px;
-                width: 100%;
-                transition: 0.3s all ease-in-out;
-
-                .text-link {
-                    @media screen and (max-width: 991px) {
-                        display: none;
-                    }
-                    @media screen and (max-width: 576px) {
-                        display: block;
-                    }
-                }
-
-                .res-link {
-                    display: none;
-                    @media screen and (max-width: 991px) {
-                        display: block;
-                    }
-                    @media screen and (max-width: 576px) {
-                        display: none;
-                    }
-                }
-
-            }
-
-            .sidebar-close {
-                display: none;
-
-                @media screen and (max-width: 576px) {
-                    display: inline-block;
-                }
-
-            }
-
-        }
-
-        .sidebar-body {
-            height: calc(100vh - 70px);
-            padding: 10px 20px;
-
-            @media screen and (max-width: 991px) {
-                padding: 20px 10px;
-            }
-
-            .sidebar-body-link {
-                text-decoration: none;
-                color: var(--light-gray);
-                display: block;
-                padding: 10px 20px;
-                transition: 0.3s all ease-in-out;
-                margin-bottom: 5px;
-                font-size: 14px;
-
-                @media screen and (max-width: 991px) {
-                    padding: 10px 0;
-                    text-align: center;
-                    border-radius: 10px;
-                }
-
-                @media screen and (max-width: 576px) {
-                    padding: 5px 10px;
-                    text-align: start;
-                    border-radius: 0;
-                }
-
-                .text-link {
-                    @media screen and (max-width: 991px) {
-                        display: none;
-                    }
-                    @media screen and (max-width: 576px) {
-                        display: inline-block;
-                    }
-                }
-
-                &:hover, &.router-link-active {
-                    color: var(--theme);
-
-                    @media screen and (max-width: 991px) {
-                        background-color: var(--light-theme);
-                    }
-
-                    @media screen and (max-width: 576px) {
-                        background-color: transparent;
-                    }
-
-                }
-
-            }
-
-        }
-
-    }
-
-    .content {
-        width: calc(100% - 250px);
-        height: 100vh;
-
-        @media screen and (max-width: 991px) {
-            width: calc(100% - 60px);
-        }
-
-        @media screen and (max-width: 576px) {
-            width: 100%;
-        }
-
-        .content-header {
-            height: 70px;
-
-            .content-header-inner {
-                width: 100%;
-                height: 70px;
-                display: flex;
-                justify-content: end;
-                align-items: center;
-
-                @media screen and (max-width: 576px) {
-                    justify-content: space-between;
-                }
-
-                .sidebar-toggle {
-                    display: none;
-
-                    @media screen and (max-width: 576px) {
-                        display: inline-block;
-                    }
-
-                }
-
-                .user-image {
-                    width: 30px;
-                    height: 30px;
-                }
-
-            }
-
-        }
-
-        .content-body {
-            height: calc(100vh - 70px);
-            background-color: var(--light-theme);
-            overflow-y: scroll;
-
-            &::-webkit-scrollbar {
-                background-color: transparent;
-                width: 0;
-            }
-
-            &::-webkit-scrollbar-thumb {
-                background: var(--light-theme);
-                border-radius: 0;
-                height: 0 !important;
-            }
-
-            .breadcrumb-title {
-                font-size: 16px !important;
-            }
-
-            .breadcrumb-text {
-                font-size: 14px !important;
-            }
-
-            .card-hover {
-                color: var(--light-gray);
-                transition: 0.3s all ease-in-out;
-
-                &:hover {
-                    transition: 0.3s all ease-in-out;
-                    box-shadow: 0 0 8px 0 var(--theme) inset;
-
-                    .effect {
-                        color: var(--theme);
-                    }
-
-                }
-
-            }
-
-            .card-list {
-                height: calc(100vh - 300px);
-                overflow-y: scroll;
-                overflow-x: hidden;
-
-                &::-webkit-scrollbar {
-                    background-color: transparent;
-                    width: 10px;
-                }
-
-                &::-webkit-scrollbar-thumb {
-                    background: var(--light-theme);
-                    border-radius: 0;
-                    height: 0 !important;
-                }
-
-            }
-
-        }
-
-    }
-
-}
+/* --- --- --- --- 06 - auth --- --- --- --- */
+@import "weight/authentication/authentication";
