--- a/resources/scss/components/02_button.scss
+++ b/resources/scss/components/02_button.scss
@@ -9,5 +9,60 @@
         transition: 0.3s all ease-in-out;
         background-color: var(--light-theme) !important;
     }
+}
 
+.btn-theme {
+    background-color: var(--theme) !important;
+    color: var(--white) !important;
+    transition: 0.3s all ease-in-out;
+    border: 1px solid var(--theme) !important;
+
+    &:hover {
+        transition: 0.3s all ease-in-out;
+        background-color: var(--dark-theme) !important;
+        color: var(--white) !important;
+        border: 1px solid transparent !important;
+    }
+}
+
+.btn-outline-theme {
+    background-color: transparent !important;
+    color: var(--theme) !important;
+    border: 1px solid var(--theme) !important;
+    transition: 0.3s all ease-in-out;
+
+    &:hover {
+        background-color: var(--theme) !important;
+        color: var(--white) !important;
+        border: 1px solid var(--theme) !important;
+        transition: 0.3s all ease-in-out;
+    }
+}
+
+.btn-theme-danger {
+    background-color: var(--theme-danger) !important;
+    color: var(--white) !important;
+    transition: 0.3s all ease-in-out;
+    border: 1px solid var(--theme-danger) !important;
+
+    &:hover {
+        transition: 0.3s all ease-in-out;
+        background-color: var(--dark-theme-danger) !important;
+        color: var(--white) !important;
+        border: 1px solid transparent !important;
+    }
+}
+
+.btn-outline-theme-danger {
+    background-color: transparent !important;
+    color: var(--theme-danger) !important;
+    border: 1px solid var(--theme-danger) !important;
+    transition: 0.3s all ease-in-out;
+
+    &:hover {
+        background-color: var(--theme-danger) !important;
+        color: var(--white) !important;
+        border: 1px solid var(--theme-danger) !important;
+        transition: 0.3s all ease-in-out;
+    }
 }
