--- a/resources/scss/weight/front-panel/front-panel.scss
+++ b/resources/scss/weight/front-panel/front-panel.scss
@@ -2,10 +2,11 @@
 
     .navbar {
 
-        .navbar-brand {}
+        .navbar-brand {
+        }
 
         .collapse, .collapsing {
-            font-family: var(--lato-font);
+            font-size: 14px !important;
 
             @media screen and (max-width: 991px) {
                 position: fixed;
@@ -54,7 +55,7 @@
                     .nav-link {
                         transition: 0.3s all ease-in-out;
 
-                        &.router-link-active, &.router-link-exact-active{
+                        &.router-link-active, &.router-link-exact-active {
                             transition: 0.3s all ease-in-out;
                             color: var(--theme);
                         }
@@ -85,5 +86,27 @@
             }
         }
     }
+
+    .banner-carousel {
+
+        .item {
+
+            img {
+                height: 650px;
+
+                @media screen and (max-width: 768px) {
+                    height: 650px;
+                }
+
+                @media screen and (max-width: 576px) {
+                    height: 450px;
+                }
+
+            }
+
+        }
+
+    }
+
 
 }
