--- a/resources/scss/components/01_typography.scss
+++ b/resources/scss/components/01_typography.scss
@@ -11,9 +11,39 @@
 }
 
 .text-theme {
-    color: var(--thene) !important;
+    color: var(--theme) !important;
 }
 
 .bg-theme {
     background-color: var(--theme) !important;
+}
+
+.link-icon-hover {
+    color: var(--light-gray) !important;
+    transition: 0.3s all ease-in-out;
+    text-decoration: none;
+    display: flex;
+    justify-content: space-between;
+    align-content: center;
+    border-bottom: 1px solid var(--bs-border-color);
+
+    &:last-child {
+        border-bottom: 1px solid transparent !important;
+    }
+
+    .bg-badge {
+        color: var(--light-gray) !important;
+        transition: 0.3s all ease-in-out;
+    }
+
+    &:hover {
+        transition: 0.3s all ease-in-out;
+        color: var(--theme) !important;
+
+        .bg-badge {
+            color: var(--theme) !important;
+            transition: 0.3s all ease-in-out;
+        }
+
+    }
 }
