--- a/resources/scss/components/02_button.scss
+++ b/resources/scss/components/02_button.scss
@@ -11,6 +11,21 @@
     }
 }
 
+.btn-category {
+    color: var(--light-gray) !important;
+    border: 0 !important;
+    border-bottom: 2px solid var(--light-gray) !important;
+    transition: 0.3s all ease-in-out;
+
+    &:hover, &.active {
+        transition: 0.3s all ease-in-out;
+        color: var(--theme-danger) !important;
+        border: 0 !important;
+        border-bottom: 2px solid var(--theme-danger) !important;
+    }
+
+}
+
 .btn-theme {
     background-color: var(--theme) !important;
     color: var(--white) !important;
@@ -63,6 +78,34 @@
         background-color: var(--theme-danger) !important;
         color: var(--white) !important;
         border: 1px solid var(--theme-danger) !important;
+        transition: 0.3s all ease-in-out;
+    }
+}
+
+.btn-theme-success {
+    background-color: var(--theme-success) !important;
+    color: var(--white) !important;
+    transition: 0.3s all ease-in-out;
+    border: 1px solid var(--theme-success) !important;
+
+    &:hover {
+        transition: 0.3s all ease-in-out;
+        background-color: var(--dark-theme-success) !important;
+        color: var(--white) !important;
+        border: 1px solid transparent !important;
+    }
+}
+
+.btn-outline-theme-success {
+    background-color: transparent !important;
+    color: var(--theme-success) !important;
+    border: 1px solid var(--theme-success) !important;
+    transition: 0.3s all ease-in-out;
+
+    &:hover {
+        background-color: var(--theme-success) !important;
+        color: var(--white) !important;
+        border: 1px solid var(--theme-success) !important;
         transition: 0.3s all ease-in-out;
     }
 }
