--- a/resources/scss/components/05_form.scss
+++ b/resources/scss/components/05_form.scss
@@ -1,6 +1,6 @@
 .form-control {
     transition: 0.3s all ease-in-out;
-    border: 1px solid transparent !important;
+    border: 1px solid var(--bs-border-color) !important;
     box-shadow: 0 0 0 0 !important;
     outline: none !important;
     border-radius: 5px !important;
@@ -14,7 +14,7 @@
 
 .form-select {
     transition: 0.3s all ease-in-out;
-    border: 1px solid transparent !important;
+    border: 1px solid var(--bs-border-color) !important;
     box-shadow: 0 0 0 0 !important;
     outline: none !important;
     border-radius: 5px !important;
@@ -31,7 +31,7 @@
     height: 100%;
     padding: 10px 20px;
     transition: 0.3s all ease-in-out;
-    border: 1px solid transparent !important;
+    border: 1px solid var(--bs-border-color) !important;
     box-shadow: 0 0 0 0 !important;
     outline: none !important;
     border-radius: 5px !important;
