--- a/resources/scss/styles.scss
+++ b/resources/scss/styles.scss
@@ -39,6 +39,9 @@ body {
 /* --- --- --- --- 06 - pagination --- --- --- --- */
 @import "components/06_pagination";
 
+/* --- --- --- --- 07 - width & height --- --- --- --- */
+@import "components/07_width_&_height";
+
 /* --- --- --- --- admin panel --- --- --- --- */
 @import "weight/admin-panel/admin-panel";
 
