--- a/resources/scss/components/05_form.scss
+++ b/resources/scss/components/05_form.scss
@@ -4,6 +4,7 @@
     box-shadow: 0 0 0 0 !important;
     outline: none !important;
     border-radius: 5px !important;
+    color: var(--light-gray) !important;
 
     &:hover, &:active, &:focus {
         transition: 0.3s all ease-in-out;
@@ -18,6 +19,7 @@
     box-shadow: 0 0 0 0 !important;
     outline: none !important;
     border-radius: 5px !important;
+    color: var(--light-gray) !important;
 
     &:hover, &:active, &:focus {
         transition: 0.3s all ease-in-out;
@@ -29,12 +31,13 @@
 .form-textarea {
     width: 100%;
     height: 100%;
-    padding: 10px 20px;
+    padding: 10px 15px;
     transition: 0.3s all ease-in-out;
     border: 1px solid var(--bs-border-color) !important;
     box-shadow: 0 0 0 0 !important;
     outline: none !important;
     border-radius: 5px !important;
+    color: var(--light-gray) !important;
 
     &:hover, &:active, &:focus {
         transition: 0.3s all ease-in-out;
