--- a/resources/scss/weight/front-panel/front-panel.scss
+++ b/resources/scss/weight/front-panel/front-panel.scss
@@ -1,89 +1,101 @@
 .front-portal {
 
-    .navbar {
+    .header {
+        transition: 0.3s all ease-in-out;
+        padding: 12px 0;
 
-        .navbar-brand {  }
+        &.animated-shadow {
+            transition: 0.3s all ease-in-out;
+            box-shadow: 0 0 8px 0 var(--light-gray);
+            padding: 0;
+        }
 
-        .collapse, .collapsing {
-            font-size: 14px !important;
+        .navbar {
 
-            @media screen and (max-width: 991px) {
-                position: fixed;
-                top: 0;
-                bottom: 0;
-                right: -400px;
-                width: 360px;
-                height: 100%;
-                background-color: var(--bs-light);
-                padding: 30px;
-                box-shadow: 0 0 8px 0 var(--bs-border-color);
-                display: block !important;
-                transition: 0.3s all ease-in-out !important;
+            .navbar-brand {  }
 
-                &.show {
+            .collapse, .collapsing {
+                font-size: 14px !important;
+
+                @media screen and (max-width: 991px) {
+                    position: fixed;
+                    top: 0;
+                    bottom: 0;
+                    right: -400px;
+                    width: 360px;
+                    height: 100%;
+                    background-color: var(--bs-light);
+                    padding: 30px;
+                    box-shadow: 0 0 8px 0 var(--bs-border-color);
+                    display: block !important;
                     transition: 0.3s all ease-in-out !important;
-                    right: 0;
-                }
 
-            }
-
-            @media screen and (max-width: 576px) {
-                position: fixed;
-                top: 0;
-                bottom: 0;
-                right: -110%;
-                width: 100%;
-                height: 100%;
-                background-color: var(--bs-light);
-                padding: 30px;
-                box-shadow: 0 0 8px 0 var(--bs-border-color);
-                display: block !important;
-                transition: 0.3s all ease-in-out !important;
-
-                &.show {
-                    transition: 0.3s all ease-in-out !important;
-                    right: 0;
-                }
-
-            }
-
-            .navbar-nav {
-
-                .nav-item {
-
-                    .nav-link {
-                        transition: 0.3s all ease-in-out;
-
-                        &:hover, &.router-link-active, &.router-link-exact-active {
-                            transition: 0.3s all ease-in-out;
-                            color: var(--theme);
-                        }
-
+                    &.show {
+                        transition: 0.3s all ease-in-out !important;
+                        right: 0;
                     }
 
-                    .icon-close {
-                        background-color: var(--bs-white);
-                        box-shadow: 0 0 8px 0 var(--bs-border-color);
-                        transition: 0.3s all ease-in-out;
+                }
 
-                        &:hover {
+                @media screen and (max-width: 576px) {
+                    position: fixed;
+                    top: 0;
+                    bottom: 0;
+                    right: -110%;
+                    width: 100%;
+                    height: 100%;
+                    background-color: var(--bs-light);
+                    padding: 30px;
+                    box-shadow: 0 0 8px 0 var(--bs-border-color);
+                    display: block !important;
+                    transition: 0.3s all ease-in-out !important;
+
+                    &.show {
+                        transition: 0.3s all ease-in-out !important;
+                        right: 0;
+                    }
+
+                }
+
+                .navbar-nav {
+
+                    .nav-item {
+
+                        .nav-link {
                             transition: 0.3s all ease-in-out;
-                            box-shadow: 0 0 12px 0 var(--bs-border-color);
+
+                            &:hover, &.router-link-active, &.router-link-exact-active {
+                                transition: 0.3s all ease-in-out;
+                                color: var(--theme);
+                            }
+
+                        }
+
+                        .icon-close {
+                            background-color: var(--bs-white);
+                            box-shadow: 0 0 8px 0 var(--bs-border-color);
+                            transition: 0.3s all ease-in-out;
+
+                            &:hover {
+                                transition: 0.3s all ease-in-out;
+                                box-shadow: 0 0 12px 0 var(--bs-border-color);
+                            }
                         }
                     }
+                }
+            }
+
+            .navbar-toggler {
+                background-color: var(--bs-white);
+                box-shadow: 0 0 8px 0 var(--bs-border-color);
+                transition: box-shadow 0.3s ease-in-out;
+
+                &:hover {
+                    box-shadow: 0 0 12px 0 var(--bs-border-color);
                 }
             }
         }
 
-        .navbar-toggler {
-            background-color: var(--bs-white);
-            box-shadow: 0 0 8px 0 var(--bs-border-color);
-            transition: box-shadow 0.3s ease-in-out;
-
-            &:hover {
-                box-shadow: 0 0 12px 0 var(--bs-border-color);
-            }
-        }
     }
 
     .banner-carousel {
