--- a/resources/scss/components/05_form.scss
+++ b/resources/scss/components/05_form.scss
@@ -6,7 +6,7 @@
     border-radius: 5px !important;
     color: var(--light-gray) !important;
 
-    &:hover, &:active, &:focus {
+    &:active, &:focus {
         transition: 0.3s all ease-in-out;
         border: 1px solid var(--theme) !important;
     }
@@ -21,7 +21,7 @@
     border-radius: 5px !important;
     color: var(--light-gray) !important;
 
-    &:hover, &:active, &:focus {
+    &:active, &:focus {
         transition: 0.3s all ease-in-out;
         border: 1px solid var(--theme) !important;
     }
@@ -39,7 +39,7 @@
     border-radius: 5px !important;
     color: var(--light-gray) !important;
 
-    &:hover, &:active, &:focus {
+    &:active, &:focus {
         transition: 0.3s all ease-in-out;
         border: 1px solid var(--theme) !important;
     }
