update ui of single page of department and service

--- a/resources/scss/styles.scss
+++ b/resources/scss/styles.scss
@@ -42,6 +42,9 @@ body {
 /* --- --- --- --- 07 - width & height --- --- --- --- */
 @import "components/07_width_&_height";
 
+/* --- --- --- --- 08 - width & height --- --- --- --- */
+@import "components/08_background";
+
 /* --- --- --- --- admin panel --- --- --- --- */
 @import "weight/admin-panel/admin-panel";
 
