--- a/resources/scss/weight/front-panel/front-panel.scss
+++ b/resources/scss/weight/front-panel/front-panel.scss
@@ -117,6 +117,13 @@
 
         }
 
+        .owl-dots {
+            position: absolute;
+            bottom: 10px;
+            left: 0;
+            right: 0;
+        }
+
     }
 
     .breadcrumb-content {
