--- a/resources/scss/components/06_pagination.scss
+++ b/resources/scss/components/06_pagination.scss
@@ -14,8 +14,8 @@
             justify-content: center;
             align-items: center;
             box-shadow: 0 0 0 0 !important;
-            color: var(--light-gray);
-            border: 1px solid var(--light-gray) !important;
+            color: var(--theme);
+            border: 1px solid var(--theme) !important;
             margin: 0 5px;
             border-radius: 6px;
             z-index: 1
