--- a/resources/scss/weight/front-panel/front-panel.scss
+++ b/resources/scss/weight/front-panel/front-panel.scss
@@ -7,12 +7,14 @@
         &.animated-shadow {
             transition: 0.3s all ease-in-out;
             box-shadow: 0 0 8px 0 var(--light-gray);
-            padding: 0;
+            padding: 4px 0;
         }
 
         .navbar {
 
-            .navbar-brand {  }
+            .navbar-brand {
+                font-size: 18px !important;
+            }
 
             .collapse, .collapsing {
                 font-size: 14px !important;
@@ -132,5 +134,96 @@
         object-fit: cover;
     }
 
+    .doctor-schedule {
+        font-size: 14px !important;
+        font-family: var(--lato-font-family);
+
+        @media screen and (max-width: 1200px) {
+            display: flex;
+            align-items: start;
+        }
+
+        .schedule-header {
+            display: flex;
+
+            @media screen and (max-width: 1200px) {
+                display: inline-block;
+            }
+
+            .schedule-box {
+                background-color: var(--light-gray);
+                color: var(--white);
+                border: 1px solid var(--white);
+                min-height: 74px;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+
+                &.doctor-name {
+                    min-width: 230px;
+
+                    @media screen and (max-width: 1200px) {
+                        width: 100%;
+                    }
+
+                    @media screen and (max-width: 768px) {
+                        min-width: 150px !important;
+                    }
+
+                }
+
+                &.schedule-day {
+                    width: 100%;
+                }
+            }
+        }
+
+        .schedule-body {
+            display: flex;
+
+            @media screen and (max-width: 1200px) {
+                display: block;
+                width: 100%;
+            }
+
+            .schedule-box {
+                background-color: var(--bs-light);
+                color: var(--breadcrumb-text);
+                border: 1px solid var(--white);
+
+                &.doctor-name {
+                    min-width: 230px;
+                    min-height: 74px;
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+
+                    @media screen and (max-width: 1200px) {
+                        justify-content: start;
+                        width: 100%;
+                        background-color: var(--bs-secondary);
+                        color: var(--white);
+                        min-width: 120px !important;
+                        padding-left: 20px;
+                    }
+
+                }
+
+                &.schedule-day {
+                    width: 100%;
+                    min-height: 74px;
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+
+                    @media screen and (max-width: 1200px) {
+                        justify-content: start;
+                        width: 100%;
+                        padding-left: 20px;
+                    }
+                }
+            }
+        }
+    }
 
 }
