--- a/resources/scss/components/02_button.scss
+++ b/resources/scss/components/02_button.scss
@@ -1,4 +1,7 @@
-/* button */
+.btn {
+    font-size: 14px !important;
+    border-radius: 4px !important;
+}
 
 .btn-icon {
     background-color: transparent;
