--- a/resources/scss/weight/admin-panel/component/sidebar.scss
+++ b/resources/scss/weight/admin-panel/component/sidebar.scss
@@ -51,6 +51,10 @@
             width: 100%;
             transition: 0.3s all ease-in-out;
 
+            @media screen and (max-width: 576px) {
+                padding: 10px 0;
+            }
+
             .text-link {
                 @media screen and (max-width: 991px) {
                     display: none;
