--- a/resources/scss/weight/admin-panel/admin-panel.scss
+++ b/resources/scss/weight/admin-panel/admin-panel.scss
@@ -43,7 +43,7 @@
 
             @import "component/dashboard";
 
-            @import "component/card-content";
+            @import "component/profile";
 
         }
 
